There probably shouldn't be a newline at the end of a tooltip string (which just adds empty space to the tooltip).
In this case it's the Key details, User-IDs tab, hovering the "Validity" column header.
There probably shouldn't be a newline at the end of a tooltip string (which just adds empty space to the tooltip).
In this case it's the Key details, User-IDs tab, hovering the "Validity" column header.
| rGPA Gnu Privacy Assistant | |||
| rGPA70858dcd6062 Trim tooltips before displaying. | |||
Thanks. There is an easier solution for this, though: I now trim trailing LFs.
BTW, please collect a few minor problems and put them all into one report. The overhead processing small reports is quite high.