Trim tooltips before displaying.

* src/gtktools.c (gpa_add_tooltip): Strip traling LFs.
* src/confdialog.c (create_dialog_tabs_2): Use gpa_add_tooltip.
--

GnuPG-bug-id: 4216
Signed-off-by: Werner Koch <wk@gnupg.org>